# terminal-ai

./: main.py  pyproject.toml
src/: __main__.py
src/aia/: __init__.py  models.py  workflow.py
src/aia/agents/: info_collector.py  planner.py
src/aia/util/: __init__.py
src/tools/: filesystem.py  shell.py
src/tools/docker/: __init__.py
src/util/: __init__.py
