[project]
name = "aia"
version = "0.1.0"
description = "Terminal AI agent at your service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[interop-langchain,openai]>=0.8.1",
    "pydantic>=2.10.6",
    "pygentree>=1.0.4",
    "requests>=2.32.3",
]

[project.scripts]
aia = "aia:run"
